--- a/appAcademico/app/config/parameters.yml
+++ b/appAcademico/app/config/parameters.yml
@@ -7,8 +7,8 @@ parameters:
     database_password: null
     mailer_transport: gmail
     mailer_host: smtp.gmail.com
-    mailer_user: scaichemoran@gmail.com
-    mailer_password: xxxxxxx
+    mailer_user: titulacion.php@gmail.com
+    mailer_password: sc123456
     secret: ThisTokenIsNotSoSecretChangeIt
     perfilEst: 1
     perfilDoc: 2
