--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
@@ -1,3 +1,6 @@
 admin_academico_home:
     path:     /calendario
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:calendario_carrera }
+admin_academico_cambio_pass:
+    path:     restablecer_pass
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:cambio_password }
