--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
@@ -2,5 +2,8 @@ admin_academico_home:
     path:     /calendario
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:calendario_carrera }
 admin_academico_cambio_pass:
-    path:     restablecer_pass
+    path:     /restablecer_pass
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:cambio_password }
+admin_academico_ingreso_nuevo_pass:
+    path:     /nuevo_pass
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:ingreso_nuevo_pass }
