--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/estudiantes.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/estudiantes.yml
@@ -29,6 +29,9 @@ estudiantes_grabar_matricula:
 estudiantes_presenta_matricula:
     pattern:  /presentarmatricula
     defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:presenta_matricula}
+estudiantes_pdf_matricula:
+    pattern:  /pdfmatricula
+    defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:pdfmatricula}
 SisAcademico_docentes:
     resource: "@TitulacionSisAcademicoBundle/Resources/config/docentes.yml"
     prefix:   /docentes
