--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/estudiantes.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/estudiantes.yml
@@ -20,6 +20,27 @@ estudiantes_notas_historico:
 estudiantes_menu_derecho:
     pattern:  /menuderecho
     defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:menuderecho}
+    
+
+
+
+
+
+
+
+
+
+
+
+estudiantes_anulacion:
+    pattern:  /anulacion
+    defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:anulacion_materias}
+estudiantes_anulacion_materias:
+    pattern:  /anulacion_materias
+    defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:anulacion_materias_2}
+estudiantes_anulacion_materias_2:
+    pattern:  /anulacion_materias_2
+    defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:anulacion_materias_3}
 
 SisAcademico_docentes:
     resource: "@TitulacionSisAcademicoBundle/Resources/config/docentes.yml"
