--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
@@ -7,3 +7,6 @@ admin_academico_cambio_pass:
 admin_academico_ingreso_nuevo_pass:
     path:     /nuevo_pass
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:ingreso_nuevo_pass }
+admin_academico_cargar_eventos:
+    path:     /nuevo_pass
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:cargar_eventos }
