--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
@@ -8,8 +8,8 @@ admin_academico_ingreso_nuevo_pass:
     path:     /nuevo_pass
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:ingreso_nuevo_pass }
 admin_academico_cargar_eventos:
-    path:     /nuevo_pass
+    path:     /cargar_eventos
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:cargar_eventos }
 admin_academico_cargar_eventos_user:
-    path:     /nuevo_pass
+    path:     /eventos_user
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:cargar_eventos_carrera_user }
