--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
@@ -19,6 +19,10 @@ admin_registro_ordenpago:
 admin_carreras_ordenpago:
     path:     /carrerasordenpago
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:carrerasordenpago }
-    path:     /eventos_user
-    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:cargar_eventos_carrera_user }
+admin_academico_crear_eventos:
+    path:     /crear_evento
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:crear_eventos_academicos }
+admin_academico_insertar_eventos:
+    path:     /insertar_evento
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:insertar_eventos_calendario }
 
