--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
@@ -25,4 +25,6 @@ admin_academico_crear_eventos:
 admin_academico_insertar_eventos:
     path:     /insertar_evento
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:insertar_eventos_calendario }
-
+admin_academico_editar_eventos:
+    path:     /editar_evento
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:editar_eventos_calendario }
