--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
@@ -19,6 +19,12 @@ admin_registro_ordenpago:
 admin_carreras_ordenpago:
     path:     /carrerasordenpago
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:carrerasordenpago }
-    path:     /eventos_user
-    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:cargar_eventos_carrera_user }
+admin_listar_ordenpago:
+    path:     /listarordenpago
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:listarordenpago }
+admin_actualiza_ordenpago:
+    path:     /actualizaordenpago
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:actualizaordenpago }
+    # path:     /eventos_user
+    # defaults: { _controller: TitulacionSisAcademicoBundle:Admin:cargar_eventos_carrera_user }
 
