--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/estudiantes.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/estudiantes.yml
@@ -49,7 +49,10 @@ estudiantes_pdf_ordenpago:
     defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:pdfordenpago}
 estudiantes_subir_archivos:
     pattern:  /subirarchivos/{idEstudiante}
-    defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:subirarchivos}   
+    defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:subirarchivos} 
+estudiantes_listar_solicitudes:
+    pattern:  /listarsolicitudes
+    defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:listarsolicitudes} 
 SisAcademico_docentes:
     resource: "@TitulacionSisAcademicoBundle/Resources/config/docentes.yml"
     prefix:   /docentes
