--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
@@ -33,4 +33,16 @@ admin_inscripcion_listar:
 admin_inscripcion_resgistrar:
     path:     /inscripcion_registar
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:inscripcion_registrar }
+admin_anulacion:
+    path:     /anulacion
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:anulacion }
+admin_anulacion_datos:
+    path:     /anulacion_datos
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:anulacion_datos }
+admin_anulacion_listar:
+    path:     /anulacion_listar
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:anulacion_listar }
+admin_anulacion_detalle:
+    path:     /anulacion_detalle
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:anulacion_detalle }
 
