--- a/appAcademico/composer.json
+++ b/appAcademico/composer.json
@@ -59,6 +59,11 @@
         },
         "branch-alias": {
             "dev-master": "2.7-dev"
-        }
+        },
+	"require": {
+    ...
+
+    "tfox/mpdf-port-bundle": "1.2.*"
+	}
     }
 }
