--- a/appAcademico/app/config/parameters.yml
+++ b/appAcademico/app/config/parameters.yml
@@ -20,3 +20,5 @@ parameters:
     perfilEstCordi: 14
     perfilDocCordi: 24
     perfilAdminCordi: 34
+    # rol_secretario: 0
+    # rol_coordinador: 0
