--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/estudiantes.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/estudiantes.yml
@@ -56,6 +56,12 @@ estudiantes_pdf_anulamateria:
 estudiantes_pdf_horarioexamen:
     pattern:  /pdfHorarioExamen/{idEstudiante}/{idCarrera}/{ciclo}/{carrera}
     defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:pdfHorarioExamen}
+estudiantes_horarios:
+    pattern:  /carrerasHorarios
+    defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:carrerasHorarios}
+estudiantes_pdf_horariogeneral:
+    pattern:  /pdfHorarioGeneral/{idEstudiante}/{idCarrera}/{ciclo}/{carrera}
+    defaults: { _controller: TitulacionSisAcademicoBundle:Estudiantes:pdfHorarioGeneral}
 SisAcademico_docentes:
     resource: "@TitulacionSisAcademicoBundle/Resources/config/docentes.yml"
     prefix:   /docentes
