--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/home.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/home.yml
@@ -9,3 +9,7 @@ titulacion_sis_academico_logout:
 titulacion_sis_academico_mail:
     path:     /sendmail
     defaults: { _controller: TitulacionSisAcademicoBundle:Home:enviarmail }
+
+titulacion_sis_academico_get_captcha:
+    path:     /captcha
+    defaults: { _controller: TitulacionSisAcademicoBundle:Home:get_captcha }
