--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
@@ -132,6 +132,10 @@ admin_generacion_horario_examene2:
 admin_muestra_estudiantes:
     pattern:  /muestra/estudiantes
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:muestraEstudiantes}
+
+admin_muestra_docente_horario:
+    pattern:  /docente_horario
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:docente_horario}
     
 admin_exportaPDF_estudiantes:
     pattern:  /PDF/estudiantes/{docente}/{materia}/{docente_text}/{materia_text}/{paralelo}
