--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ nbproject/private/private.properties
 nbproject/private/private.xml
 nbproject/project.properties
 nbproject/project.xml
+appAcademico/nbproject/private/config.properties
+appAcademico/nbproject/private/private.properties
+appAcademico/nbproject/private/private.xml
+appAcademico/nbproject/project.properties
+appAcademico/nbproject/project.xml
