--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/config/admin.yml
@@ -186,5 +186,7 @@ admin_cargar_pagina:
 admin_pdf_ordenpago:
     pattern:  /pdfordenpago/{idEstudiante}/{idCarrera}/{ciclo}/{carrera}/{identificacion}
     defaults: { _controller: TitulacionSisAcademicoBundle:Admin:pdfordenpago}
-    
+admin_anulacion_negar:
+    path:     /anulacion_negar
+    defaults: { _controller: TitulacionSisAcademicoBundle:Admin:anulacion_negar }
 
